--- a/.github/workflows/trade.yml
+++ b/.github/workflows/trade.yml
@@ -2,8 +2,10 @@ name: Trading Automation
 
 on:
   schedule:
-    - cron: "*/5 * * * *"   # runs every 5 minutes
-  workflow_dispatch:         # allows you to run manually from GitHub Actions tab
+    # Run every 5 minutes, Monday-Friday, from 03:45 to 10:00 UTC (9:15 to 15:30 IST)
+    - cron: "*/5 3-9 * * 1-5"
+    - cron: "0 10 * * 1-5"
+  workflow_dispatch:   # allows manual run
 
 jobs:
   run-trade:
@@ -24,8 +26,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run trading script
-        run: |
-          python src/daily_recommender_once.py
+        run: python src/daily_recommender_once.py
 
       - name: Upload signals
         uses: actions/upload-artifact@v3
